First working rev of steps, unit tests and evaluation of events.

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,14 @@
 [run]
 branch = true
+source =
+    quartet_output
 
 [report]
 omit =
     *site-packages*
     *tests*
     *.tox*
+    apps.py
 show_missing = True
 exclude_lines =
     raise NotImplementedError
