--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,10 @@ stages:
     - build-docs
     #- pypi
 
+services:
+  -name: mendhak/http-https-echo:latest
+  -alias: testhost
+
 python3_5_unit_test:
   image: seriallab/python3.5dev
   stage: test-python
