--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -11,4 +11,5 @@ django-extensions>=2.0.7
 djangorestframework>=3.8.2
 -e git+ssh://git@gitlab.com:serial-lab/quartet_capture.git#egg=quartet_capture
 -e git+ssh://git@gitlab.com:serial-lab/epcpyyes.git#egg=epcpyyes
+-e git+ssh://git@gitlab.com:serial-lab/eparsecis.git#egg=eparsecis
 # Additional test requirements go here
