--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ python3_5_unit_test:
   image: seriallab/python3.5dev
   stage: test-python
   script:
+  - apt-get update -y
   - apt-get install -y git
   - export PYTHONPATH=$PYTHONPATH:$CI_PROJECT_DIR
   - pip install -r requirements_test.txt
