Update to dependencies for test/CI

--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -9,7 +9,8 @@ lxml
 celery>=4.1.1
 django-extensions>=2.0.7
 djangorestframework>=3.8.2
--e git+ssh://git@gitlab.com:serial-lab/quartet_capture.git#egg=quartet_capture
--e git+ssh://git@gitlab.com:serial-lab/epcpyyes.git#egg=epcpyyes
--e git+ssh://git@gitlab.com:serial-lab/eparsecis.git#egg=eparsecis
-# Additional test requirements go here
+quartet_capture>=1.0.20
+epcpyyes>=1.2.8
+eparsecis>1.1.6
+
+
