Updates for bumpversion.  new dev status.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,19 +48,19 @@ pages:
     only:
       - tags
 
-#deploy_pypi:
-#  image: seriallab/python3.6dev
-#  stage: pypi
-#  environment:
-#    name: deployment
-#    url: https://pypi.org/
-#  script:
-#    - echo "[distutils]" >> ~/.pypirc
-#    - echo "index-servers = " >> ~/.pypirc
-#    - echo "[pypi]" >> ~/.pypirc
-#    - echo "username=$PYPI_USER" >> ~/.pypirc
-#    - echo "password=$PYPI_PASSWORD" >> ~/.pypirc
-#    - python setup.py check sdist bdist_wheel upload
-#    - rm ~/.pypirc
-#  only:
-#    - tags
+deploy_pypi:
+  image: seriallab/python3.6dev
+  stage: pypi
+  environment:
+    name: deployment
+    url: https://pypi.org/
+  script:
+    - echo "[distutils]" >> ~/.pypirc
+    - echo "index-servers = " >> ~/.pypirc
+    - echo "[pypi]" >> ~/.pypirc
+    - echo "username=$PYPI_USER" >> ~/.pypirc
+    - echo "password=$PYPI_PASSWORD" >> ~/.pypirc
+    - python setup.py check sdist bdist_wheel upload
+    - rm ~/.pypirc
+  only:
+    - tags
